--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,14 +1,17 @@
 .common-footer {
+    margin: 0 auto;
     padding-top: 30px;
     width: 1100px;
-    height: 150px;
-    margin-top: 100px;
+    height: 230px;
+    margin-top: 50px;
     box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, .3);
+
 }
 
 .footer{
     display: flex;
     justify-content: space-between;
+
 }
 
 .logo-footer {
@@ -90,9 +93,9 @@ input:focus::-webkit-input-placeholder {
 }
 
 .copyright-footer {
-    margin-top: 15px;
     text-align: center;
     color: #333333;
     padding-top: 10px;
     opacity: .4;
 }
+
