--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,5 @@
 .common-header {
+    margin: 0 auto;
     display: flex;
     width: 1100px;
     align-items: center;
@@ -11,11 +12,13 @@
     font-size: 50px;
     color: #333333;
     cursor: pointer;
+    text-decoration: none;
 }
 
 
 
 .button-write-to-us {
+    font-family: 'Elsie', cursive;
     color: #5DC4B8;
     font-weight: bold;
     border-radius: 10px;
